syntax = "proto3";

package auth;

option go_package = "./app/microservices/auth/pb";

service AuthService {
    rpc Me(MeRequest) returns (MeResponse) {}
}

message MeRequest {
    string token = 1;
}

message User {
    string uid = 1;
    string first_name = 2;
    string last_name = 3;
    string email = 4;
    string phone = 5;
    string address = 6;
    string is_admin = 7;
    string is_verified = 8;
    string created_at = 9;
    string updated_at = 10;
}
  
message MeResponse {
    int64 status = 1;
    string message = 2; 
    User data = 3;
}